# tic-tac-toe

./: README.md  index.html  merge-push.sh  scripts.js  styles.css
client-tui/: Cargo.toml  README.md
client-tui/src/: main.rs  network.rs  protocol.rs  tui.rs  ui.rs
client-web/: README.md  index.html  scripts.js  styles.css
server/: README.md  package-lock.json  package.json
server/src/: app.rs  init.ts
src/: init.ts
